// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DnD Store Element is initiated 1`] = `
Object {
  "id-0": CoreInstance {
    "currentLeft": 0,
    "currentTop": 0,
    "depth": 0,
    "id": "id-0",
    "keys": Object {
      "chK": null,
      "pK": "1-0",
      "sK": "0-0",
    },
    "offset": Object {
      "height": 0,
      "left": 0,
      "top": 0,
      "width": 0,
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "prevTranslateY": Array [],
    "ref": <div />,
    "translateX": 0,
    "translateY": 0,
  },
}
`;

exports[`DnD Store Returns all element connections and instance 1`] = `
Object {
  "branches": Object {
    "parents": undefined,
    "siblings": "id-0",
  },
  "element": CoreInstance {
    "currentLeft": 0,
    "currentTop": 0,
    "depth": 0,
    "id": "id-0",
    "keys": Object {
      "chK": null,
      "pK": "1-0",
      "sK": "0-0",
    },
    "offset": Object {
      "height": 0,
      "left": 0,
      "top": 0,
      "width": 0,
    },
    "order": Object {
      "parent": 0,
      "self": 0,
    },
    "prevTranslateY": Array [],
    "ref": <div />,
    "translateX": 0,
    "translateY": 0,
  },
  "parent": null,
}
`;
